// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmSessionWelcome with accounts has the expected html structure 1`] = `
<div
  class="tm-session"
  id="session-welcome"
>
  <div
    class="tm-session-container"
  >
    <div
      class="tm-session-header"
    >
      <a>
        <i
          class="material-icons"
        >
          help_outline
        </i>
      </a>
       
      <div
        class="tm-session-title"
      >
        
        Sign in to Cosmos Voyager
      
      </div>
       
      <a>
        <i
          class="material-icons"
        >
          close
        </i>
      </a>
    </div>
     
    <div
      class="tm-session-main"
    >
      <li-session-stub
        icon="explore"
        subtitle="Use the app in explorer mode without signing in."
        title="Explorer Mode"
      />
       
      <li-session-stub
        icon="lock"
        id="sign-in-with-account"
        subtitle="If you have an account, choose this option."
        title="Sign in with password"
      />
       
      <li-session-stub
        icon="person_add"
        subtitle="Generate a brand new seed and create a new account."
        title="Create new account"
      />
       
      <li-session-stub
        icon="settings_backup_restore"
        subtitle="Use an existing seed phrase to create an account."
        title="Import with seed"
      />
       
      <li-session-stub
        icon="usb"
        subtitle="If you have a Ledger Wallet, choose this option."
        title="Sign in with hardware"
      />
    </div>
     
    <div
      class="tm-session-footer"
    />
  </div>
</div>
`;

exports[`TmSessionWelcome without accounts has the expected html structure 1`] = `
<div
  class="tm-session"
  id="session-welcome"
>
  <div
    class="tm-session-container"
  >
    <div
      class="tm-session-header"
    >
      <a>
        <i
          class="material-icons"
        >
          help_outline
        </i>
      </a>
       
      <div
        class="tm-session-title"
      >
        
        Sign in to Cosmos Voyager
      
      </div>
       
      <a>
        <i
          class="material-icons"
        >
          close
        </i>
      </a>
    </div>
     
    <div
      class="tm-session-main"
    >
      <li-session-stub
        icon="explore"
        subtitle="Use the app in explorer mode without signing in."
        title="Explorer Mode"
      />
       
      <!---->
       
      <li-session-stub
        icon="person_add"
        subtitle="Generate a brand new seed and create a new account."
        title="Create new account"
      />
       
      <li-session-stub
        icon="settings_backup_restore"
        subtitle="Use an existing seed phrase to create an account."
        title="Import with seed"
      />
       
      <li-session-stub
        icon="usb"
        subtitle="If you have a Ledger Wallet, choose this option."
        title="Sign in with hardware"
      />
    </div>
     
    <div
      class="tm-session-footer"
    />
  </div>
</div>
`;
